k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sampleapp1-service
  namespace: sampleapp1-82188379
spec:
  selector:
    app: sampleapp1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
